test/types/integral/integralvariable2.good
integralvariable2.chpl:1: error: Variables can't be declared using abstract generic types like 'integral'
